# RLFusion

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_reasoning_full_4k.sh  run_reasoning_full_8k.sh
examples/: aime2025_evaluation.py  capybara_sft_train.py  grpo_trainer_math.py  grpo_trainer_math_vllm.py  inference_example.py  intellect_math_grpo.py  intellect_math_onpolicy_distill.py  mmlu_eval.py  nemotron_math_grpo_train.py  onpolicy_distillation_example.py  onpolicy_distillation_vllm_example.py  riddlebench_grpo_train.py  riddlesense_arc_eval.py  sft_trainer_example.py  ultrachat_qwen3_sft_train.py  ultrachat_sft_train.py
examples/reasoning/: README.md  ace_reason_grpo_train.py  aime2025_evaluate.py  reasoning_grpo_train.py  reasoning_sft_train.py  superior_reasoning_sft_train.py
src/rlfusion/: __init__.py
src/rlfusion/datasets/: __init__.py  aime.py  capybara_sft.py  intellect_math.py  nemotron_math.py  riddlebench.py  rlvr.py  ultrachat_sft.py
src/rlfusion/envs/: __init__.py  base_envs.py
src/rlfusion/evaluation/: evaluator.py
src/rlfusion/inference/: __init__.py  hf_utils.py  vllm_utils.py
src/rlfusion/trainers/: __init__.py  common.py  data.py  sft_trainer.py  (+4 more)
tests/: conftest.py  test_aime_dataset.py  test_attention_masks.py  test_capybara_sft.py  test_evaluator.py  test_grpo_trainer_test.py  test_hf_utils.py  test_math_dataset.py  test_onpolicy_reward.py  test_riddlebench_dataset.py  test_sft_masking.py  test_ultrachat_sft_dataset.py  test_utils.py
training_guide/: grpo.md  onpolicy_distillation.md  sft.md  trainer_walkthrough.md
(+2 files in other folders)
